# pix-transaction

./: README.md  Taskfile.yml
api/: Dockerfile  go.mod  go.sum
api/cmd/: main.go
api/cmd/handlers/: profile_handler.go
api/httputils/: error.go  grpc.go  httputils.go
api/internal/config/: cfg.go
api/internal/httputils/: BUILD.bazel  grpc_test.go
api/internal/middleware/: logger.go  middleware.go
api/internal/profile/: backend.go  model.go
api/proto/v1/: profile.pb.go  profile.proto  profile_grpc.pb.go
docker/development/: docker-compose.yml
docker/local/deployment/: docker-compose.yml
docker/local/development/: docker-compose.yml
profile/: .env  Dockerfile  go.mod  go.sum
profile/cmd/: main.go  server.go
profile/internal/account/: account.go  model.go  repository.go  service.go  service_test.go
profile/internal/cfg/: cfg.go  cfg_test.go
profile/internal/errutils/: errors.go
profile/internal/event/: event.go  event_test.go
profile/internal/key/: model.go  repository.go  service.go  service_test.go
profile/internal/keys/: keys.go  model.go  repository.go  service.go
profile/internal/pix/: model.go  repository.go  service.go  validate.go
profile/internal/transaction/: model.go  service.go  service_test.go  validate.go
profile/proto/: profile.pb.go  profile.proto  profile_grpc.pb.go
transaction/: .env  Dockerfile  go.mod  go.sum
transaction/cmd/: main.go  server.go
transaction/proto/: profile.pb.go  profile.proto  profile_grpc.pb.go  transaction.pb.go  transaction.proto  transaction_grpc.pb.go
user/: go.mod
(+59 files in other folders)
